@@ -94,6 +94,8 @@ Vernacular commands
 - Include Type is now deprecated since Include now accept both modules and
   module types.
 - Declare ML Module supports Local option.
+- New command "Declare Reduction <id> := <conv_expr>", allowing to write
+  later "Eval <id> in ...". This command accepts a Local variant.
 
 Tools
 
